--- a/Views/Product/Index.cshtml
+++ b/Views/Product/Index.cshtml
@@ -27,7 +27,7 @@
                 <td>@item.fiyat</td>
                 <td>@item.stok</td>
                 <td><a href="/Product/Delete/@item.urunID" class="btn btn-danger">Sil</a></td>
-                <td><a href="/Product/Update/@item.urunID" class="btn btn-success">Güncelle</a></td>
+                <td><a href="/Product/GetProduct/@item.urunID" class="btn btn-success">Güncelle</a></td>
             </tr>
         }
     </tbody>
