--- a/Views/Product/NewProduct.cshtml
+++ b/Views/Product/NewProduct.cshtml
@@ -9,27 +9,27 @@
 <form class="form-group" method="post">
     <div>
         <label>Ürün Adı</label>
-        <input type="text" name="urunAd" class="form-control" />
+        <input type="text" name="urunAd" class="form-control" required />
     </div>
     <br />
     <div>
         <label>Kategori Seçiniz</label>
-        @Html.DropDownListFor(m => m.tblKategoriler.kategoriID, (List<SelectListItem>)ViewBag.Kategoriler, "Seçiniz", new { @class = "form-control" })
+        @Html.DropDownListFor(m => m.tblKategoriler.kategoriID, (List<SelectListItem>)ViewBag.Kategoriler, "Seçiniz", new { @class = "form-control", @required="required"})
     </div>
     <br />
     <div>
         <label>Markası</label>
-        <input type="text" name="Marka" class="form-control" />
+        <input type="text" name="Marka" class="form-control" required />
     </div>
     <br />
     <div>
         <label>Fiyatı</label>
-        <input type="text" name="fiyat" class="form-control" />
+        <input type="text" name="fiyat" class="form-control" required />
     </div>
     <br />
     <div>
         <label>Stok Adeti</label>
-        <input type="text" name="stok" class="form-control" />
+        <input type="text" name="stok" class="form-control" required />
     </div>
     <br />
     <div style="margin-top:10px;">
