--- a/Views/Shared/_MainLayout.cshtml
+++ b/Views/Shared/_MainLayout.cshtml
@@ -24,13 +24,33 @@
                 <li><a href="/Product/Index">Ürünler</a></li>
                 <li><a href="/Customer/Index">Müşteriler</a></li>
                 <li><a href="/Sales/Index">Satışlar</a></li>
-                <li><a href="/Default/Index">Yardım</a></li>
+                <li><a href="#" data-toggle="modal" data-target="#ModalHelp">Yardım</a></li>
             </ul>
         </div>
     </nav>
-
     <div class="container">
         @RenderBody()
+    </div>
+    <!-- Yardım Modal -->
+    <div class="modal fade" id="ModalHelp">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    
+                    <h3 class="modal-title">Yardım Penceresi 
+                        <span class="glyphicon glyphicon-info-sign text-info" style="float:right;"></span>
+                    </h3>
+                </div>
+                <div class="modal-body">
+                    <p>Merhabalar, Ben <b>Nesrin Düzgün.</b><span class="glyphicon glyphicon-heart text-danger"></span></p>
+                    <p>Bu uygulama Murat Yücedağ'ın Hazırladığı MVC 50 Dersinin örnek uygulamasıdır.</p>
+                    <p>
+                        <span class="glyphicon glyphicon-copyright-mark text-primary"></span>
+                        Bu proje Nisan 2025 yılında yapılmıştır.
+                    </p>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 </html>
